--- a/placeholder/example/placeholder.html
+++ b/placeholder/example/placeholder.html
@@ -3,16 +3,13 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title>placeholder</title>
-
 	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-	<script src="placeholder.js"></script>
+	<script src="../placeholder.js"></script>
 	<link rel="stylesheet" href="placeholder.css"/>
-
 </head>
 <body>
 
 <input type="text" id="email" placeholder="Email"/>
-
 
 <script>
 	$('input[type="text"],textarea').placeholder({});
