--- a/mailForm/exemple/index.html
+++ b/mailForm/exemple/index.html
@@ -26,7 +26,7 @@
 	<span>data-mailform-client-message="Thank you for your resume!"</span> - set back mail for client<br>
 </p>
 
-<div class="Data-MailForm"
+<div class="Data-Form"
 		data-mailform-subject="Collect Resume"
 		data-mailform-mailto="artur.collin@gmail.com"
 		data-mailform-client-message="Thank you for your resume!">
@@ -52,7 +52,7 @@
 			<option>BRAZIL</option>
 		</select>
 
-		<div class="Data-MailForm-Checkbox" data-mailform-field-title="Hobby">
+		<div class="Data-Form-Checkbox" data-mailform-field-title="Hobby">
 			<label for="business">Business</label>
 			<input id='business' value='Business' type="checkbox"/>
 			<label for="sport">Sport</label>
