--- a/dropDownMenu/drobDownMenu.html
+++ b/dropDownMenu/drobDownMenu.html
@@ -18,10 +18,19 @@
 </div>
 
 
+<div class="but">
+	<span>
+		Выбрать нужный пункт
+	</span>
+</div>
+
+
 <script>
 
 
-	$('.Button').drobDownMenu({items:['Главная', 'О компании', 'Информация','Каталог', 'Яблоки'],item:5} );
+	$('.Button').drobDownMenu({items:['Главная', 'О компании', 'Информация','Каталог', 'Яблоки']});
+	$('.but').drobDownMenu({items:['Главная', 'О компании', 'Информация','Каталог', 'Яблоки','Главная', 'О компании', 'Информация','Каталог', 'Яблоки'],height_menu:8});
+
 
 
 </script>
