--- a/dropDownMenu/drobDownMenu.html
+++ b/dropDownMenu/drobDownMenu.html
@@ -28,7 +28,7 @@
 <script>
 
 
-	$('.Button').drobDownMenu({items:['Главная', 'О компании', 'Информация','Каталог', 'Яблоки']});
+	$('.Button').drobDownMenu({items:['Главная', 'О компании', 'Информация','Каталог', 'Яблоки'], show_select:'yes'});
 	$('.but').drobDownMenu({items:['Главная', 'О компании', 'Информация','Каталог', 'Яблоки','Главная', 'О компании', 'Информация','Каталог', 'Яблоки'],height_menu:8});
 
 
